--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,6 @@
-name = "GHRtoCFR"
+name = "ghrtocfr"
 main = "src/index.js"
-compatibility_date = "2024-01-01"
+compatibility_date = "2025-01-01"
 
 [site]
 bucket = "./public"
@@ -14,7 +14,7 @@ type = "ESModule"
 globs = ["**/*.js"]
 
 [[rules]]
-type = "CSS"
+type = "Text"
 globs = ["**/*.css"]
 
 [vars]
@@ -22,12 +22,11 @@ ENVIRONMENT = "production"
 
 [[kv_namespaces]]
 binding = "SYNC_STATUS"
-id = "your-kv-namespace-id"
-preview_id = "your-preview-kv-namespace-id"
+id = "671e98de4e3c4d44a08cba27826cf7b3"
 
 [[r2_buckets]]
 binding = "R2_BUCKET"
-bucket_name = "your-bucket-name"
+bucket_name = "github-releases"
 
 [observability.logs]
 enabled = true
